--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/cyanb20/project1/issues"
   },
-  "homepage": "https://github.com/cyanb20/project1#readme"
+  "homepage": "https://github.com/cyanb20/project1#readme",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
